--- a/REXPaint/REXPaint.cfg
+++ b/REXPaint/REXPaint.cfg
@@ -4,7 +4,7 @@ defaultImageWidth=0
 defaultImageHeight=0
 defaultImageBackground={0,0,0}
 startSkin="DEFAULT"
-startFont="DEFAULT"
+startFont="CP437 14x14"
 startPalette="DEFAULT"
 canvasScrollRate=10
 canvasGridResolution=10
